--- a/react-cards/src/styles/global.css
+++ b/react-cards/src/styles/global.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
-*
+*,
 *::before,
 *::after {
   box-sizing: border-box;
